<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="goButton"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#8BC34A"
        android:gravity="center"
        android:onClick="goButton"
        android:paddingBottom="30dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="30dp"
        android:text="@string/go_button"
        android:textSize="48sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <TextView
            android:id="@+id/countDownTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#AEFFC107"
            android:gravity="center"
            android:text="@string/countdown_text"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/question_text"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#9003A9F4"
            android:gravity="center"
            android:text="@string/score_text"
            android:textSize="32sp" />
    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:rowCount="2"
        tools:visibility="gone">

        <TextView
            android:id="@+id/option1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#FD96B4"
            android:onClick="checkAnswer"
            android:paddingBottom="30dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="30dp"
            android:tag="@string/option1_text"
            android:text="@string/option1_text"
            android:textSize="48sp"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/option2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#93E397"
            android:onClick="checkAnswer"
            android:paddingBottom="30dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="30dp"
            android:tag="@string/option2_text"
            android:text="@string/option2_text"
            android:textSize="48sp"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/option3TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#FFF6A2"
            android:onClick="checkAnswer"
            android:paddingBottom="30dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="30dp"
            android:tag="@string/option3_text"
            android:text="@string/option3_text"
            android:textSize="48sp"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/option4TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#97D1FF"
            android:onClick="checkAnswer"
            android:paddingBottom="30dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="30dp"
            android:tag="@string/option4_text"
            android:text="@string/option4_text"
            android:textSize="48sp"
            app:layout_column="1"
            app:layout_row="1" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/finalScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/final_score_text"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/restart_button_text"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finalScoreTextView"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/confetti_imageview_text"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/finalScoreTextView"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:srcCompat="@drawable/confetti"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>